# robobo-gazebo-simulator

./: CMakeLists.txt  README.md  package.xml  setup.py
include/robobo/: infrared_range.h  move_pan_tilt.h  move_wheels.h  robobo_camera.h  robobo_camera_utils.h  robobo_imu_sensor.h
launch/: robobo.launch  robobo_multi.launch  robobo_rviz.launch  robobo_validation.launch
models/robobo/: model.sdf
nodes/: robobo_irs
nodes/src/robobo/: robobo_irs.py
plugins/: battery_consumer.cpp  battery_discharge.cpp  encoders.cpp  infrared_range.cpp  light_sensor.cpp  move_pan_tilt.cpp  move_wheels.cpp  robobo_imu_sensor.cpp
plugins/include/robobo/: battery_consumer.hh  battery_discharge.hh  light_sensor.h
rviz_config/: robobo.rviz
scripts/: cameraTest.py  completeTest.py  moveTest.py  panTiltTest.py  robobo_validation.py
src/robobo/: robobo_irs.py
urdf/: robobo.urdf.xacro
urdf/robobo/: model.urdf.xacro
worlds/: world1.world  world2.world  world3.world  world4.world  world6.world
